syntax = "proto3";

option java_package = "com.osc.saveRecentlyViewed";
option java_multiple_files = true;

message FetchRecentlyViewedProducts{
  string userId = 1;
}

message FetchResponse{
  string message = 1;
}

message RecentlyViewedDataRequest {
  string userId = 1;
}

message SaveResponse {
  string message = 1;
}

service SaveViewedProducts {
  rpc GetRecentlyViewedProducts(FetchRecentlyViewedProducts) returns (FetchResponse);
  rpc SaveRecentlyViewedData(RecentlyViewedDataRequest) returns (SaveResponse) {}
}
